test/test_examples/syntactic_examples/syntax_error/error_statement_110.zig
// Syntax error: Incorrect expression in condition

const ifj = @import("ifj24.zig");

pub fn main() void {
    var x: i32 = 32;
    const y : i32 = 89;

    while(8*(y - x)).
    {
        processItem(1458242);
    }
}